# move_by_ft_wrist

./: CMakeLists.txt  package.xml
cfg/: ArucoFilter.cfg  ForceTorque.cfg  Handshake.cfg
config/: armby.yaml  armbytiago.yaml  aruco_pose_filter_demo.yaml  handshake_reemc.yaml  handshake_tiago.yaml
launch/: admitance_arm.launch  admitance_arm_GAZEBO.launch  admitance_arm_GAZEBO_handshake.launch  admitance_arm_KINEMATIC.launch  admitance_arm_handshake.launch  admitance_arm_handshake_tiago.launch  arm_by_ft_wrist.launch  follow_marker_demo.launch  marker_detector.launch  marker_detector_right.launch  prepare_demo.launch  wbc_controller.launch  wbc_right_arm_controller.launch
scripts/: admitance_handshake.py  arm_by_ft_wrist.py  arm_by_ft_wrist_dynamic_offset.py  arm_by_ft_wrist_hardcoded_frame.py  aruco_pose_filter.py  avg_forces.py  close_hand_by_ft.py  force_from_gravity_vector.py  force_torque_publisher.py  home_right_arm.sh  interactive_marker_posestamped.py  wrench_marker.py
