<?xml version="1.0"?>
<package format="2">
  <name>move_by_ft_wrist</name>
  <version>0.0.0</version>
  <description>The move_by_ft_wrist package</description>

  <author email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</author>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>

</package>